api ressource de phases et questions associees à ses assertions
