# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8000/api",
+            "url": "http://127.0.0.1:8000/api",
             "description": "API Server VotePad2"
         }
     ],
@@ -85,6 +85,64 @@
                 "summary": "Afficher la liste des intervenants",
                 "description": "Api qui nous retourne la liste des intervenants",
                 "operationId": "getIntervenantsList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/phases": {
+            "get": {
+                "tags": [
+                    "phases"
+                ],
+                "summary": "Afficher la liste des Phases",
+                "description": "Api qui nous retourne la liste des Phases",
+                "operationId": "getPhasesList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/questions": {
+            "get": {
+                "tags": [
+                    "questions"
+                ],
+                "summary": "Afficher la liste des questions",
+                "description": "Api qui nous retourne la liste des questions",
+                "operationId": "getQuestionsList",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
